# internal/services/request_service.go
@@ -10,23 +10,23 @@ import (
 
 type RequestService interface {
 	GetByUUID(ctx context.Context, uuid uuid.UUID) (*models.Request, error)
-	ListByDeviceUUID(ctx context.Context, deviceUUID uuid.UUID) ([]*models.Request, error)
+	ListByAssetUUID(ctx context.Context, assetUUID uuid.UUID) ([]*models.Request, error)
 	ListByUserUUID(ctx context.Context, userUUID uuid.UUID) ([]*models.Request, error)
 }
 
 type requestService struct {
 	requestRepo repository.RequestRepo
-	deviceRepo  repository.DeviceRepo
+	assetRepo  repository.AssetRepo
 	photoRepo   repository.PhotoRepo
 }
 
 func NewRequestService(
 	requestRepo repository.RequestRepo,
-	deviceRepo repository.DeviceRepo,
+	assetRepo repository.AssetRepo,
 	photoRepo repository.PhotoRepo) RequestService {
 	return &requestService{
 		requestRepo: requestRepo,
-		deviceRepo:  deviceRepo,
+		assetRepo:  assetRepo,
 		photoRepo:   photoRepo,
 	}
 }
@@ -35,8 +35,8 @@ func (s *requestService) GetByUUID(ctx context.Context, uuid uuid.UUID) (*models
 	return s.requestRepo.GetByUUID(ctx, uuid)
 }
 
-func (s *requestService) ListByDeviceUUID(ctx context.Context, deviceUUID uuid.UUID) ([]*models.Request, error) {
-	return s.requestRepo.ListByDeviceUUID(ctx, deviceUUID)
+func (s *requestService) ListByAssetUUID(ctx context.Context, assetUUID uuid.UUID) ([]*models.Request, error) {
+	return s.requestRepo.ListByAssetUUID(ctx, assetUUID)
 }
 
 func (s *requestService) ListByUserUUID(ctx context.Context, userUUID uuid.UUID) ([]*models.Request, error) {
